--- a/xdg.cabal
+++ b/xdg.cabal
@@ -52,8 +52,8 @@ cabal-version:       >=1.10
 library
 
   -- Modules exported by the library.
-  exposed-modules:   System.Enviroment.XDG
-                   , System.Enviroment.DesktopFiles
+  exposed-modules:   System.Environment.XDG
+                   , System.Environment.XDG.DesktopFile
   
   -- Modules included in this library but not exported.
   -- other-modules:       
@@ -65,6 +65,7 @@ library
   build-depends:      base >=4.6 && <4.7
                     , attoparsec >= 0.11.2
                     , text >= 0.7.2.1
+                    , containers >= 0.5.0.0
 
   
   -- Directories containing source files.
