--- a/xdg.cabal
+++ b/xdg.cabal
@@ -66,6 +66,7 @@ library
                     , attoparsec >= 0.11.2
                     , text >= 0.7.2.1
                     , containers >= 0.5.0.0
+                    , xml >= 1.3.13
 
   
   -- Directories containing source files.
