--- a/xdg.cabal
+++ b/xdg.cabal
@@ -68,6 +68,7 @@ library
                     , attoparsec >= 0.11.2
                     , text >= 1.1.0.1
                     , containers >= 0.5.0.0
+                    , process >= 1.2.0.0
                     , xml >= 1.3.13
 
   
