--- a/xdg.cabal
+++ b/xdg.cabal
@@ -70,6 +70,7 @@ library
                     , parsec >= 0.11.2
                     , containers >= 0.5.0.0
                     , process >= 1.2.0.0
+                    , xml >= 1.3.13
 
   
   -- Directories containing source files.
