--- a/xdg.cabal
+++ b/xdg.cabal
@@ -57,6 +57,7 @@ library
                    , System.Environment.XDG.Internal.Xml
                    , System.Environment.XDG.DesktopEntry
                    , System.Environment.XDG.MimeApps
+                   , System.Environment.XDG.BaseDir
   
   -- Modules included in this library but not exported.
   -- other-modules:       
@@ -70,6 +71,7 @@ library
                     , parsec >= 0.11.2
                     , containers >= 0.5.0.0
                     , process >= 1.2.0.0
+                    , filepath >= 1.3.0.1
                     , xml >= 1.3.13
 
   
