--- a/xdg.cabal
+++ b/xdg.cabal
@@ -59,8 +59,8 @@ library
                    , System.Environment.XDG.MimeApps
                    , System.Environment.XDG.BaseDir
                    , System.Environment.XDG.Menu
-                   , System.Environment.XDG.RecentFiles
                    , System.Environment.XDG.MimeType
+                   , System.Environment.XDG.Autostart
   
   -- Modules included in this library but not exported.
   -- other-modules:       
@@ -75,6 +75,7 @@ library
                     , containers >= 0.5.0.0
                     , process >= 1.2.0.0
                     , filepath >= 1.3.0.1
+                    , directory >= 1.2.1.0
                     , xml >= 1.3.13
 
   
