--- a/xdg.cabal
+++ b/xdg.cabal
@@ -73,7 +73,7 @@ library
                     , transformers >= 0.4.1.0
                     , parsec >= 3.1.3
                     , containers >= 0.5.0.0
-                    , process >= 1.1.0.2
+                    , process == 1.1.0.2
                     , filepath >= 1.3.0.1
                     , directory >= 1.2.1.0
                     , xml >= 1.3.13
