--- a/xdg.cabal
+++ b/xdg.cabal
@@ -70,13 +70,12 @@ library
   
   -- Other library packages from which modules are imported.
   build-depends:      base >=4.6 && <4.8
-                    , transformers >= 0.4.1.0
+                    , transformers
                     , parsec >= 3.1.3
                     , containers >= 0.5.0.0
                     , process >= 1.1.0.2
                     , filepath >= 1.3.0.1
                     , directory >= 1.2.1.0
-                    , xml >= 1.3.13
 
   
   -- Directories containing source files.
